# OPSEC

./: .gitignore  README  opsecrc.sh
code/: README  build.sh  clean.sh  setup.sh.example
code/arpack/: Makefile.am  Makefile.in  README  configure  configure.ac
code/arpack/ARPACK/: Makefile.am  Makefile.in  configure  configure.ac
code/arpack/ARPACK/SRC/: Makefile.in
code/arpack/ARPACK/UTIL/: arscnd.f  arscnd.f.orig
code/arpack/PARPACK/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
code/arpack/PARPACK/SRC/MPI/: Makefile.am  Makefile.in  pdsaup2.f  pdsaupd.f  pdseupd.f.orig  pznaup2.f
code/gmock/: Makefile.am  Makefile.in  README  TODO  aclocal.m4  bootstrap.sh  configure  configure.ac
code/gmock/src/: Makefile.am  Makefile.in  Spline.cpp  Spline.h  abn.c  abn.h  array.cpp  array.h  cfg.c  cfg.h  estimator.cpp  estimator.h  gcorr.cpp  gmock.cpp  grid.cpp  grid.h  histogram.cpp  histogram.h  particle.h  rng.c  rng.h  sampling.cpp  sampling.h  test.cfg  testrng.c  vec3.h
code/opsec/: .gitignore  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap  bootstrap.sh  configure  configure.ac  ltmain.sh  opsec_config.h.in
code/opsec/doc/: fly.nb  geometry.tex  ideal.tex  klmodes.tex  manual.tex  method.tex  modes_problem.tex  notes.txt  poisson.tex  thin.tex
code/opsec/doc/figs/: geometry.fig  geometry.pdf_t
code/opsec/m4/: blacs.m4  scalapack.m4
code/opsec/python/: .gitignore  Makefile.am  Makefile.in  README  TODO  abn.py  banded_est.py  binpk.py  cell2vtk.py  cfg.py  counthist.py  estimate.py  gal2pdf.py  gal2vtk.py  hammer.py  opsec-submit.in  pixhist.py  plot_estimate.py  real_estimate.py  smoothpk.py
code/opsec/src/: .gitignore  AnasaziSolver.cpp  AnasaziSolver.h  BoxSurvey.cpp  BoxSurvey.h  Cell.cpp  Cell.h  KaiserModel.cpp  KaiserModel.h  Makefile.am  Makefile.in  Matrix.h  Model.cpp  Model.h  MyAnasazi.h  MyMatrix.hpp  MyMultiVec.h  MySignalMatrixOperator.h  ParpackSolver.cpp  ParpackSolver.h  QSpline.cpp  QSpline.h  README  RealModel.cpp  RealModel.h  RealSplineModel.cpp  RealSplineModel.h  SelectionFunc.cpp  SelectionFunc.h  SeparationFunc.cpp  SeparationFunc.h  Solver.cpp  Solver.h  SphericalSurvey.cpp  SphericalSurvey.h  Spline.cpp  Spline.h  SplitFile.cpp  SplitFile.h  Survey.cpp  (+38 more)
code/opsec/tests/: Makefile.am  Makefile.in  README  testBoxSurvey.cpp  testMonteCarlo.cpp  testMyMatrix.cpp  testScaLAPACK.cpp  testSplitFile.cpp  testSurvey.cpp  testabn.c  testcfg.c  testeig.cpp  testfft.cpp  testio.cpp  testmodel.cpp  testsig.cpp  testslp.cpp
code/opsec/utils/: .gitignore  Makefile.am  Makefile.in  dm2abn.cpp  gmock.cpp  grid.cpp  grid.h  hpx2img.cpp  img2hpx.cpp  legendre.cpp  makeradial.cpp  mkmatrix.c  multipole.cpp  realmock.cpp  unigal.cpp  vagc2abn.cpp
code/scripts/: build_cfitsio.sh  build_trilinos.sh  cfitsio.sh  clean_trilinos.sh  cuba.sh  openblas.sh  scalapack.sh  trilinos.sh
results/thinshell/: README
runs/tests/gmock.0/: opsec.cfg  run.sh  run.sh.riemann
runs/tests/gmock.1/: opsec.cfg
runs/tests/gmock.2/: opsec.cfg
runs/tests/gmock.3/: opsec.cfg  run.sh
runs/tests/gmock.4/: opsec.cfg  run.sh
runs/tests/gmock.5/: opsec.cfg
runs/tests/gmock.6/: opsec.cfg
runs/tests/realmock.0/: opsec.cfg  run.sh
runs/tests/realmock.2/: opsec.cfg  run.sh
runs/tests/realmock.3/: opsec.cfg  run.sh
runs/tests/realmock.4/: opsec.cfg  run.sh
runs/tests/realmock.5/: opsec.cfg
runs/tests/var.0/: opsec.cfg  run.sh
testruns/c/: const_mask.hpx  opsec.cfg  run.sh
