lib_LTLIBRARIES = libparpack.la
libparpack_la_LDFLAGS =

libparpack_la_SOURCES = \
	debug.h stat.h \
	\
	psgetv0.f  \
	psnaitr.f psnapps.f psnaup2.f psnaupd.f psneigh.f psngets.f \
	pssaitr.f pssapps.f pssaup2.f pssaupd.f psseigt.f pssgets.f \
	psneupd.f psseupd.f pslarnv.f pslamch.f psnorm2.f \
	\
	pdgetv0.f \
	pdnaitr.f pdnapps.f pdnaup2.f pdnaupd.f pdneigh.f pdngets.f \
	pdsaitr.f pdsapps.f pdsaup2.f pdsaupd.f pdseigt.f pdsgets.f \
	pdneupd.f pdseupd.f pdlarnv.f pdlamch.f pdnorm2.f \
	\
	pcnaitr.f pcnapps.f pcnaup2.f pcnaupd.f pcneigh.f \
	pcneupd.f pcngets.f pcgetv0.f pscnorm2.f pclarnv.f \
	\
	pznaitr.f pznapps.f pznaup2.f pznaupd.f pzneigh.f \
	pzneupd.f pzngets.f pzgetv0.f pdznorm2.f pzlarnv.f \
	\
	../../UTIL/MPI/pcmout.f ../../UTIL/MPI/pcvout.f ../../UTIL/MPI/pdmout.f \
	../../UTIL/MPI/pdvout.f ../../UTIL/MPI/pivout.f ../../UTIL/MPI/psmout.f \
	../../UTIL/MPI/psvout.f ../../UTIL/MPI/pzmout.f ../../UTIL/MPI/pzvout.f
